Fix flex issue on listview on safari browser

--- a/src/components/product-tile/product-tile.scss
+++ b/src/components/product-tile/product-tile.scss
@@ -530,7 +530,7 @@ $_product-tile-list_sidebar-column-breakpoint-max: '<#{$product-tile-list_one-co
                 .cs-products-list--with-sidebar & {
                     padding: 0;
                     margin: $product-tile-list_addons-one-column-margin;
-                    flex: 1;
+                    flex: 1 0 auto;
                     flex-direction: row;
                     border-left: none;
 
